# actions_ml_fpga

./: .gitignore  README.md  pyproject.toml  requirements.txt
MLP/: data.py  model.pth  train.py
MLP/vitis/: mlp.cpp  mlp.hpp  model_params.hpp
MLP_quantized/: data.py  generateTest.py  model.onnx  model.pth  onnx_print.py  onnx_view.py  test.py  test_data.hpp  train.py
MLP_quantized/vitis/: main.cpp  model_params.hpp  test.cpp  test_data.hpp
MLP_quantized_vitis/: main.cpp  model_params.hpp  test.cpp  test_data.hpp
MLP_tanh/: export.py  model.pth  model_params.hpp  pth_print.py  test.py  train.py  weights_bias.csv
MLP_tanh/pynq/: overlay.py  processed_data_scaled.csv
MLP_tanh/vitis/: main.cpp  main_new.cpp  model_params.hpp  test.cpp  test_data.hpp
MNIST/: generateTest.py  train.py
MNIST/vitis/: main.cpp  model_params.hpp  test.cpp
MNIST_quantized/: generateTest.py  onnx_print.py  train.py
MNIST_quantized/vitis/: main.cpp  model_params.hpp  test.cpp
actions/badminton/: badminton_2.csv  badminton_5.csv
actions/boxing/: boxing_4.csv
actions/end/: end_1.csv  end_2.csv  end_5.csv
actions/fencing/: fencing_1.csv  fencing_5.csv
actions/golf/: golf_1.csv  golf_2.csv  golf_5.csv
actions/reload/: reload_1.csv
actions/shield/: shield_1.csv
actions/snowbomb/: snowbomb_1.csv  snowbomb_2.csv  snowbomb_3.csv  snowbomb_5.csv
actions/walking/: walking_1.csv
actions/wearing/: wearing_1.csv  (+3 more)
inference/: imu_logger.py
logger/: imu_logger.py  requirements.txt
ml_model/: data.py  inference.py  model.pth  model_params.hpp  test.py  train.py
(+46 files in other folders)
