[tool.poetry]
name = "ml-model"
version = "0.1.0"
description = ""
authors = ["Rayleigh47 <yanming8870@outlook.com>"]
readme = "README.md"

packages = [
    { include = "ml_model" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
torch = "^2.6.0"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"

[tool.poetry.scripts]
train = "ml_model.train:main"
data = "ml_model.data:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
